--- a/infra.yml
+++ b/infra.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   psql:
@@ -11,6 +11,5 @@ services:
       - "${DB_PORT}:5432"
     volumes:
       - psql_volume:/var/lib/postgresql/data
-
 volumes:
   psql_volume:
